# full-stack-admin

./: .gitignore  Makefile  README.md  docker-compose.yml  example.env
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/: main.py
backend/src/accounts/: auth.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/src/core/: db.py  security.py  settings.py
backend/src/stocks/: routes.py  schemas.py  service.py
frontend/: README.md  example.env  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  main.ts
frontend/src/api/: accounts.ts  http.ts  stocks.ts
frontend/src/components/: AppCard.vue  AppDialog.vue
frontend/src/layouts/: Header.vue  Main.vue  Sidebar.vue
frontend/src/navigation/: buildSidebar.ts  iconMap.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth-session.ts  auth-state.ts  auth.ts  theme.ts
frontend/src/styles/: element-plus-vars.css
frontend/src/views/: DashboardView.vue
frontend/src/views/account/: SettingsView.vue
frontend/src/views/auth/: LoginView.vue  RegisterView.vue
frontend/src/views/auth/components/: AuthSidePanel.vue
frontend/src/views/stocks/: StocksListView.vue
